<resources>
    <string name="facebook_app_id">700352396677077</string>
    <string name="app_name">Job Karov</string>
    <string name="selectrange">תחום:</string>
    <string name="selectrole">תפקיד:</string>
    <string name="selectarea">באזור:</string>
    <string name="selectradius">במרחק של:</string>
    <string name="selecttype">סוג משרה:</string>
    <string name="findnow">חפש משרה</string>
    <string name="enablegpscommand">אשר הפעלת GPS במסך זה ולאחר מכן לחץ על לחצן חזור מימין למטה</string>
    <string name="notgood"> GPS לא מדויק מספיק</string>
    <string name="loading">מחפש. אנא המתן</string>
    <string name="loadingshort">מחפש</string>
    <string name="serverproblem">בעיה בשרת, נסה שוב מאוחר יותר</string>
    <string name="netproblem">בעיה בחיבור לרשת.בדוק שיש גישה לאינטרנט</string>
    <string name="about">חיפוש עבודה בקלות להגיע רחוק ולעבוד קרוב.
JOBKAROV הינו אתר ייחודי בחיפוש עבודה סביבך ונוצר מתוך צורך בסיסי למציאת מקום עבודה 
 סביב אזור המגורים, לימודים , הורים וכו.
משתמשים ומעסיקים יוכלו ליהנות מפלטפורמה חדשה וייחודית מצד אחד -מציאת עבודה סביב 
רדיוס מסוים אשר אותו מגדירים מראש – עד כמה זמן אתם מוכנים להשקיע בזמן נסיעה לעבודה או 
בהליכה רגלית. מצד שני- מעסיקים יוכלו לקבל קו"ח של מועמדים שנמצאים סביב מקום העבודה 
ולחסוך בעלויות נסיעה .
האתר והאפליקציה מאפשרים מציאת עבודה קרובה על מנת לחסוך בזמן הנסיעה למקום העבודה 
וזאת בכדי ליהנות מזמן איכות עם המשפחה , חברים ,תחביבים ועוד.
משתמשים יקרים ניתן לקבל מגוון הצעות עבודה אשר מתעדכנות בכל יום.
כדאי ורצוי להירשם לסוכן החכם על מנת לקבל משרות און ליין ישירות למייל או לסמארטפון.\n
לשירות לקוחות ניתן לפנות במייל : support@jobkarov.com
צוות החברה עומד לרשותכם בכל עת .</string>
    <string name="aboutmenu">אודות</string>
    <string name="close">חזור</string>
    <string name="advancedsearch">חיפוש מתקדם</string>
    <string-array name="menudelete">
        <item>חזור</item>
        <item>מחק</item>
    </string-array>
    <string-array name="specialities">
        <item>הכל</item>
        <item>אופטיקה</item>
        <item>אופנה וטקסטיל</item>
        <item>אחזקה ושירותי ניקיון</item>
        <item>אינטרנט ומדיה</item>
        <item>אלקטרוניקה וחשמל</item>
        <item>בידור מדיה ואומנות</item>
        <item>ביוטכנולוגיה</item>
        <item>ביטוח</item>
        <item>בינוי ותשתיות</item>
        <item>הנדסאים</item>
        <item>חומרה</item>
        <item>חינוך והוראה</item>
        <item>טיפוח ויופי</item>
        <item>יצוא ויבוא</item>
        <item>כלכלה כספים וחשבונאות</item>
        <item>כללי</item>
        <item>מדעי החברה</item>
        <item>מדעי החיים</item>
        <item>מדעים והנדסה</item>
        <item>מהנדסים</item>
        <item>מזון ומסעדנות</item>
        <item>מזכירות ואדמיניסטרציה</item>
        <item>מחשבים ותקשורת</item>
        <item>מכירות</item>
        <item>מלונאות ותיירות</item>
        <item>מערכות מידע</item>
        <item>משאבי אנוש</item>
        <item>משפטים ועריכת דין</item>
        <item>נדלן מכירה ותיווך</item>
        <item>נהגים הפצה ושליחויות</item>
        <item>ניהול בכיר</item>
        <item>ניתוח מערכות</item>
        <item>סטודנטים ונוער</item>
        <item>ספורט ואימון</item>
        <item>ספנות ותעופה</item>
        <item>עיצוב</item>
        <item>עריכה ותוכן</item>
        <item>קמעונאות</item>
        <item>רכב</item>
        <item>רכש קניינות ולוגיסטיקה</item>
        <item>רפואה ובריאות</item>
        <item>רפואה משלימה</item>
        <item>שירות לקוחות</item>
        <item>שמירה וביטחון</item>
        <item>תוכנה</item>
        <item>תוכנה QA</item>
        <item>תעשייה וייצור</item>
    </string-array>
    <string-array name="areas">
        <item>סביבי</item>
        <item>כל הארץ</item>
        <item>מרכז</item>
        <item>שרון</item>
        <item>ירושלים והסביבה</item>
        <item>שפלה</item>
        <item>שומרון</item>
        <item>חיפה</item>
        <item>צפון</item>
        <item>דרום</item>
        <item>אילת וערבה</item>
        <item>חו\"ל</item>
    </string-array>
    <string-array name="sizes">
        <item>הכל</item>
        <item>מלאה</item>
        <item>חלקית</item>
        <item>לפי שעות</item>
        <item>פרילנס</item>
        <item>משמרות</item>
    </string-array>
    <string-array name="areasbasic">
        <item>סביבי</item>
    </string-array>
    <string name="gpsproblem">אין קליטת GPS. לא ניתן לקבוע מיקום</string>
    <string name="noresults">לא נמצאו תוצאות. </string>
    <string name="aboutjob">תיאור המשרה</string>
    <string name="save">שמור</string>
    <string name="sendtomail">שלח את המשרה למייל שלך</string>
    <string name="call">התקשר</string>
    <string name="require">דרישות התפקיד</string>
    <string name="noentries">אין נתונים שמורים</string>
    <string name="sentsuccesfull"> נשלח בהצלחה למייל:</string>
    <string name="saved">נשמר בהצלחה</string>
    <string name="favour">משרות שמורות</string>
    <string name="mapa">מפה</string>
    <string name="numfound"> משרות תואמות לחיפושך</string>
    <string name="visited">נצפו לאחרונה</string>
    <string name="orderbyname">לפי שם</string>
    <string name="orderbydistance">לפי מרחק</string>
    <string name="savetofav">שמור</string>
    <string-array name="role">
        <item>הכל</item>
    </string-array>
    <string-array name="role0">
        <item>הכל</item>
        <item>אופטומטריסט</item>
        <item>אופטיקאי</item>
    </string-array>
    <string-array name="role1">
        <item>הכל</item>
        <item>ייצור טקסטיל</item>
        <item>מעצב/ת</item>
        <item>ניהול</item>
        <item>תדמיתן/ית</item>
    </string-array>
    <string-array name="role2">
        <item>הכל</item>
        <item>אחזקה</item>
        <item>אינסטלציה</item>
        <item>גננות</item>
        <item>ניקיון ומשק בית</item>
    </string-array>
    <string-array name="role3">
        <item>הכל</item>
        <item>Facebook Developer</item>
        <item>Flash Flex - Action Script</item>
        <item>HTML</item>
        <item>JavaScript</item>
        <item>SEM</item>
        <item>SEO</item>
        <item>Web designer</item>
        <item>WebMaster</item>
        <item>אינטראקטיב</item>
        <item>הזנת תוכן</item>
        <item>מהנדס אפליקציה</item>
        <item>מכירות באינטרנט</item>
        <item>מנהל אתר</item>
        <item>מנהל מוצר - אינטרנט</item>
        <item>מנהל פרוייקטים - אינטרנט</item>
        <item>מנהל רשתות חברתיות</item>
        <item>מנהל שיווק אינטרנט</item>
        <item>מנהל שיתופי פעולה Affiliates</item>
        <item>מנהל תוכן / עורך תוכן</item>
        <item>מסחר אלקטרוני</item>
        <item>מעצב UI / UX</item>
        <item>מתכנת ASP</item>
        <item>מתכנת ASP.NET</item>
        <item>מתכנת JSP</item>
        <item>מתכנת Moss</item>
        <item>מתכנת PHP</item>
        <item>מתכנת Python</item>
        <item>מתכנת SharePoint</item>
        <item>מתכנת WEB</item>
        <item>ניהול אינטרנט</item>
        <item>ניהול בכיר - אינטרנט</item>
        <item>קידום אתרים</item>
    </string-array>
    <string-array name="role4">
        <item>הכל</item>
        <item>הנדסאי אלקטרוניקה</item>
        <item>הנדסאי חשמל</item>
        <item>הנדסת אלקטרוניקה</item>
        <item>הנדסת חשמל</item>
        <item>חיווט</item>
        <item>חשמלאי</item>
        <item>טכנאי אלקטרוניקה</item>
        <item>טכנאי מכשירי חשמל</item>
        <item>מהנדס מוצר</item>
        <item>ניהול</item>
        <item>ניהול פרוייקטים</item>
    </string-array>
    <string-array name="role5">
        <item>הכל</item>
        <item>הפקת אירועים</item>
        <item>יחסי ציבור</item>
        <item>מנהל עבודה</item>
        <item>צילום</item>
        <item>עורך/מנהל תוכן</item>
        <item>עיתונאים ועורכים</item>
        <item>פלנר</item>
        <item>קופירייטר</item>
        <item>קוריאייטיב</item>
        <item>רכש מדיה</item>
        <item>תקציבאות</item>
    </string-array>
    <string-array name="role6">
        <item>הכל</item>
        <item>טכנולוג מזון</item>
        <item>מהנדס</item>
        <item>מחקר ופיתוח</item>
        <item>מנהל פרויקטים</item>
        <item>מנכ\"ל</item>
        <item>ניהול</item>
        <item>סמנכ\"ל פיתוח</item>
        <item>רגולציה</item>
    </string-array>
    <string-array name="role7">
        <item>הכל</item>
        <item>Back Office</item>
        <item>אקטואריה ואנליזות</item>
        <item>התמחות</item>
        <item>חתמות</item>
        <item>מפקח</item>
        <item>ניהול</item>
        <item>ניתוח סיכונים וביקורת</item>
        <item>סוכן ביטוח</item>
        <item>סילוק תביעות</item>
        <item>קופות גמל</item>
        <item>רכז/פקיד ביטוח</item>
        <item>רפרנט ביטוח</item>
        <item>שיווק פנסיוני</item>
        <item>שירות שיווק ומכירות</item>
        <item>שמאות</item>
    </string-array>
    <string-array name="role8">
        <item>הכל</item>
        <item>הנדסה אזרחית</item>
        <item>הנדסת בניין</item>
        <item>מתכננים ויועצים</item>
        <item>קבלנים</item>
        <item>שרטטים ומודדים</item>
    </string-array>
    <string-array name="role9">
        <item>הכל</item>
        <item>איש תפ\"י</item>
        <item>הנדסאי בניין</item>
        <item>הנדסאי חשמל</item>
        <item>הנדסאי מכונות</item>
        <item>הנדסאי תעשייה וניהול</item>
        <item>הנדסאים כללי</item>
    </string-array>
    <string-array name="role10">
        <item>הכל</item>
        <item>BackEnd</item>
        <item>אימות פיתוח</item>
        <item>ארכיטקט מערכת</item>
        <item>הנדסה אנלוגית</item>
        <item>הנדסה דיגיטלית</item>
        <item>הנדסת RF</item>
        <item>הנדסת מיקרוגל</item>
        <item>הנדסת רכיבים</item>
        <item>הנדסת תקשורת</item>
        <item>חומרה - וריפיקציה</item>
        <item>חומרה - ניהול</item>
        <item>כתב טכני חומרה</item>
        <item>מהנדס חומרה</item>
        <item>מכירות/שיווק חומרה</item>
        <item>מלחימים</item>
        <item>מנהל מוצר חומרה</item>
        <item>מנהל מעבדה טכני</item>
        <item>מנהל פרויקטים חומרה</item>
        <item>פיתוח ותכנון חומרה</item>
    </string-array>
    <string-array name="role11">
        <item>הכל</item>
        <item>גננים/ות</item>
        <item>הדרכה</item>
        <item>חינוך מיוחד</item>
        <item>טיפול ושמרטפות</item>
        <item>ייעוץ ופסיכולוגיה</item>
        <item>מורים/ות</item>
        <item>מרצים</item>
        <item>ניהול</item>
        <item>סייעים/ות</item>
        <item>עבודה סוציאלית</item>
    </string-array>
    <string-array name="role12">
        <item>הכל</item>
        <item>איפור</item>
        <item>ייעוץ והדרכת קוסמטיקה</item>
        <item>מניקור/פדיקור</item>
        <item>עובדי ספא</item>
        <item>עיסוי</item>
        <item>עיצוב שיער</item>
        <item>קוסמטיקה</item>
    </string-array>
    <string name="done">שלח</string>
    <string name="phonenumber">מספר טלפון</string>
    <string name="password">סיסמא</string>
    <string name="cancel">סגור</string>
    <string name="select">&lt; בחר &gt;</string>
    <string name="jobstitle">משרות</string>
    <string name="bycity">לפי עיר</string>
    <string name="bycompany">לפי חברה</string>
    <string name="filter">סנן</string>
    <string name="astrix">*</string>
    <string name="emailaddress">כתובת מייל</string>
    <string name="aboutme">קצת על עצמי</string>
    <string name="addcv">צרף קובץ קורות חיים</string>
    <string name="firstname">שם פרטי </string>
    <string name="lastname">שם משפחה</string>
    <string name="sort">מיון</string>
    <string name="mapview">תצוגת מפה</string>
    <string name="approvetermsofuse1">קראתי את</string>
    <string name="approvetermsofuse2"> <u>התקנון</u> </string>
    <string name="approvetermsofuse3">ואני מאשר את תוכנו</string>
    <string name="acceptmail">אני מאשר/ת קבלת דיוור</string>
</resources>