<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
  
<RelativeLayout  android:id="@+id/linearLayout33"
    android:layout_width="match_parent"
    android:layout_height="40dp"
        android:background="@android:color/white"
    android:paddingRight="10dp" 
    android:paddingTop="10dp" 
    android:paddingBottom="10dp" >
   
    <Button
        android:id="@+id/mapbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableRight="@drawable/ic_map"
        android:paddingRight="20dp"
        android:text="@string/mapview"
                android:visibility="gone"
        android:textColor="@android:color/black"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
         />
		<TextView  android:shadowColor="@color/TransparentGrey"
                  android:shadowDx="2"
                  android:shadowDy="2"
                  android:shadowRadius="2" 
                  android:textAppearance="?android:attr/textAppearanceSmall" 
                  android:layout_height="match_parent" 
                  android:id="@+id/instructionTv" 
                  android:typeface="serif" 
                  
                  android:layout_gravity="right" 
                  android:gravity="center|right" 
                  android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
                  android:text="@string/loadingshort" android:layout_width="wrap_content" android:textColor="@color/headergraysubtitle"/>

		<Button
		    android:id="@+id/sortbutton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentTop="true"
		    android:layout_toRightOf="@+id/mapbutton"
		    android:background="@android:color/transparent"
        	android:drawableRight="@drawable/ic_reorder"
        	 android:text="@string/sort"
        	         android:visibility="gone"
        	android:textColor="@android:color/black"
        	android:paddingRight="20dp" />

		<Button
		    android:id="@+id/filterbutton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
		    android:layout_toRightOf="@+id/sortbutton"
		    android:background="@android:color/transparent"
        	android:drawableRight="@drawable/filter_icon"
        	android:paddingRight="20dp"
        	android:visibility="gone"
		    android:textColor="@android:color/white"
		    android:textSize="16sp" />

		<TextView
		    android:id="@+id/jobstitle"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
            android:layout_alignParentBottom="true"		    
		    android:layout_toLeftOf="@+id/instructionTv"
		    android:layout_marginRight="10dp"
		    android:gravity="center|right" 
		    android:shadowColor="@color/TransparentGrey"
		    android:shadowDx="2"
		    android:shadowDy="2"
		    android:shadowRadius="2"
		    android:text="@string/jobstitle"
		    android:textAppearance="?android:attr/textAppearanceSmall"
		    android:textColor="@color/headergraysubtitle"
		    android:visibility="invisible"
		    android:typeface="serif" />
    
    </RelativeLayout>    

    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="right"
        android:layout_weight="0.95"
        android:background="@android:color/white"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@color/graydivider"
        android:dividerHeight="2dp" >
</ListView>
    </LinearLayout>
 <!-- The navigation drawer -->
  <ExpandableListView android:id="@+id/left_drawer"
        android:groupIndicator="@null"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="@android:color/white"/>
    
</android.support.v4.widget.DrawerLayout>    